{
  "version": 4,
  "terraform_version": "1.3.3",
  "serial": 48,
  "lineage": "0c28deb3-9b7a-bca5-fab1-f6ecf3107ad0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-23T12:26:10.716-08:00",
            "deny": [],
            "description": "Creates firewall rule with web tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-2022-bookshelf-oleshchenko/global/firewalls/bookshelf-allow-http-tf",
            "log_config": [],
            "name": "bookshelf-allow-http-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-2022-bookshelf-oleshchenko/global/networks/bookshelf-vpc-tf",
            "priority": 1000,
            "project": "gcp-2022-bookshelf-oleshchenko",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2022-bookshelf-oleshchenko/global/firewalls/bookshelf-allow-http-tf",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "web"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.bookshelf-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-01-23T12:26:10.776-08:00",
            "deny": [],
            "description": "Creates firewall rule with ssh tag",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/gcp-2022-bookshelf-oleshchenko/global/firewalls/bookshelf-allow-ssh-tf",
            "log_config": [],
            "name": "bookshelf-allow-ssh-tf",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-2022-bookshelf-oleshchenko/global/networks/bookshelf-vpc-tf",
            "priority": 1000,
            "project": "gcp-2022-bookshelf-oleshchenko",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2022-bookshelf-oleshchenko/global/firewalls/bookshelf-allow-ssh-tf",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.bookshelf-vpc-tf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "bookshelf-vpc-tf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/gcp-2022-bookshelf-oleshchenko/global/networks/bookshelf-vpc-tf",
            "mtu": 1460,
            "name": "bookshelf-vpc-tf",
            "project": "gcp-2022-bookshelf-oleshchenko",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2022-bookshelf-oleshchenko/global/networks/bookshelf-vpc-tf"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router-bookshelf",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-23T12:26:33.895-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/gcp-2022-bookshelf-oleshchenko/regions/europe-central2/routers/router-bookshelf",
            "name": "router-bookshelf",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-2022-bookshelf-oleshchenko/global/networks/bookshelf-vpc-tf",
            "project": "gcp-2022-bookshelf-oleshchenko",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2022-bookshelf-oleshchenko/regions/europe-central2/routers/router-bookshelf"
          },
          "dependencies": [
            "google_compute_network.bookshelf-vpc-tf",
            "google_compute_subnetwork.bookshelf-subnet-tf-eu-central2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "gcp-2022-bookshelf-oleshchenko/europe-central2/router-bookshelf/my-router-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "gcp-2022-bookshelf-oleshchenko",
            "region": "europe-central2",
            "router": "router-bookshelf",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.bookshelf-vpc-tf",
            "google_compute_router.router-bookshelf",
            "google_compute_subnetwork.bookshelf-subnet-tf-eu-central2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "bookshelf-subnet-tf-eu-central2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-01-23T12:26:11.686-08:00",
            "gateway_address": "10.37.3.1",
            "id": "projects/gcp-2022-bookshelf-oleshchenko/regions/europe-central2/subnetworks/bookshelf-subnet-tf-eu-central2",
            "ip_cidr_range": "10.37.3.0/24",
            "name": "bookshelf-subnet-tf-eu-central2",
            "network": "https://www.googleapis.com/compute/v1/projects/gcp-2022-bookshelf-oleshchenko/global/networks/bookshelf-vpc-tf",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "gcp-2022-bookshelf-oleshchenko",
            "purpose": "PRIVATE",
            "region": "europe-central2",
            "self_link": "https://www.googleapis.com/compute/v1/projects/gcp-2022-bookshelf-oleshchenko/regions/europe-central2/subnetworks/bookshelf-subnet-tf-eu-central2",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.bookshelf-vpc-tf"
          ]
        }
      ]
    }
  ]
}